# phi-enhanced-rlm

./: .env.template  .gitignore  LICENSE  Novel_Mathematics_from_Phi_Separation.docx  README.md  ZENODO_DESCRIPTION.md  analyzer_trace.jsonl  api.py  async_backend.py  chat.py  embeddings.py  index.html  openrouter_backend.py  phi_enhanced_rlm.py  phi_separation_novel_mathematics.py  progress.py  pyproject.toml  repo_analyzer.py  requirements.txt  result.json  rlm_trace.jsonl  run_rlm.py  test_result.json  test_upgrades.py  validate_rlm.py
api/: __init__.py  server.py
cli/: __init__.py  chat.py  repo_analyzer.py  run_rlm.py  validate_rlm.py
src/: __init__.py  cache.py  embeddings.py  extractors.py  openrouter_backend.py  phi_enhanced_rlm.py  phi_separation_novel_mathematics.py  progress.py  vector_store.py
tests/: __init__.py  test_upgrades.py
