[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-enhanced-rlm"
version = "2.1.0"
description = "Recursive Language Model enhanced with φ-Separation Mathematics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tim McGirl", email = "grapheneaffiliate@users.noreply.github.com"}
]
keywords = ["llm", "nlp", "ai", "recursive", "golden-ratio", "phi", "mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
full = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "rich>=13.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=0.8.11",
    "trafilatura>=1.6.0",
    "tree-sitter>=0.20.0",
    "colorama>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/grapheneaffiliate/phi-enhanced-rlm"
Repository = "https://github.com/grapheneaffiliate/phi-enhanced-rlm"
Issues = "https://github.com/grapheneaffiliate/phi-enhanced-rlm/issues"

[project.scripts]
phi-rlm = "cli.chat:main"
phi-analyze = "cli.repo_analyzer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "api*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
